src/components/MessageCard.css
.message-card {
  width: -moz-fit-content;
  width: fit-content;
  max-width: 50%;
  white-space: -moz-pre-wrap !important;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
  word-wrap: break-word;
  word-break: break-all;
  white-space: normal;
  background-color: rgb(201, 201, 201);
  padding: 10px;
  margin: 0;
  margin-bottom: 1em;
  border-radius: 10px;
  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.6);
}

.message-card__user {
  width: -moz-fit-content;
  width: fit-content;
  max-width: 50%;
  white-space: -moz-pre-wrap !important;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
  word-wrap: break-word;
  word-break: break-all;
  white-space: normal;
  background-color: #8ca0ff;
  padding: 10px;
  margin: 0;
  margin-bottom: 1em;
  border-radius: 10px;
  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.6);
  margin-left: auto;
}

.message-card p,
.message-card__user p,
h6 {
  margin: 0;
  padding: 0;
}

.message-card h6 {
  text-align: left;
  color: #5366c7;
  font-size: 10px;
}

.message-card__user h6 {
  text-align: right;
  color: #555;
  font-size: 10px;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

